correct z-index

--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -418,7 +418,7 @@ img {
 .header__subname {
 	font-size: 14px;
 	padding-bottom: 5px;
-	z-index: 10;
+	z-index: 4;
 }
 
 @media (min-width: 1280px) {
